# MinecraftLanguageFileEditor

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: macos.css  styles.css
src/components/: SidebarComponent.vue  WindowButtonComponent.vue
src/router/: main.js
src/views/: EditorView.vue  HomepageView.vue
