[package]
name = "minecraft-language-file-editor"
version = "1.0.0"
description = "An editor for Minecraft language files"
authors = ["Tigercrl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "process-all", "dialog-all", "os-all", "fs-all", "path-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
